# SOCIAL-NETWORK

./: Dockerfile  pyproject.toml  readme.md
sn-back-end/: .gitignore  build.sh  compose.yml  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml
sn-back-end/src/api/: app.py  authentication.py  configuration.py
sn-back-end/src/api/dtos/: posts.py  users.py
sn-back-end/src/api/exception/: user.py
sn-back-end/src/api/routes/: home.py  posts.py  users.py
sn-back-end/src/datalayer/models/: base.py  user.py
sn-back-end/src/services/: post.py  user.py
sn-public/public/: index.html
sn-public/public/assets/css/: base.css  post.css
sn-public/public/assets/js/: app.js  fetcher.js
sn-public/public/assets/js/components/: list_posts.js  mini_post_user.js  post.js
src/api/: app.py  authentication.py  configuration.py
src/api/middlewares/: authentications.py
src/api/routes/: home.py  posts.py  users.py
src/datalayer/models/: posts.py  user.py
src/services/: post.py  user.py
